# Sandpitt

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
admin/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
admin/src/app/: globals.css  layout.tsx  providers.tsx
admin/src/app/api/auth/[...nextauth]/: route.ts
admin/src/app/assets/: page.tsx
admin/src/app/dashboard/: page.tsx
admin/src/app/inspections/: page.tsx
admin/src/app/inspections/[id]/: page.tsx
admin/src/app/sites/: page.tsx
admin/src/components/: InspectionStatusBadge.tsx  SideNav.tsx  StatsCard.tsx
admin/src/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py
api/src/: auth.py  config.py  database.py  main.py
api/src/models/: __init__.py  asset.py  base.py  inspection.py  user.py
api/src/routers/: assets.py  inspections.py  photos.py  reports.py  sites.py
api/src/schemas/: asset.py  common.py  inspection.py  site.py  user.py
api/tests/: test_health.py
docs/: Index.html  index.html  link-catalog-interactive.html  link-research-catalog.md  project-status.md  quote-to-job-saas-strategy.md
infra/keycloak/: realm-export.json
infra/postgres/: init-multiple-dbs.sh
mobile/: app.json  package.json
mobile/app/(tabs)/: _layout.tsx  assets.tsx  inspections.tsx  profile.tsx
mobile/app/inspection/: [id].tsx
mobile/src/api/: client.ts  inspections.ts
mobile/src/hooks/: useAuth.ts
