[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandpitt-api"
version = "0.1.0"
description = "Sandpitt Inspection Management System — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "sqlalchemy[asyncio]==2.0.31",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "pydantic-settings==2.3.4",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "python-jose[cryptography]==3.3.0",
    "minio==7.2.7",
    "geoalchemy2==0.15.1",
    "psycopg2-binary==2.9.9",
    "Pillow==10.4.0",
    "python-dateutil==2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.1",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.5.2",
    "mypy==1.10.1",
    "types-python-dateutil==2.9.0.20240316",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
